[project]
name = "scripts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "httpx>=0.28.1",
    "langchain>=0.3.20",
    "langchain-openai>=0.3.7",
    "langchain-openrouter>=0.0.2",
    "langchain-qdrant>=0.2.0",
    "langgraph>=0.2.67",
    "llama-index>=0.14.15",
    "openai>=1.63.0",
    "qdrant-client>=1.13.2",
    "trafilatura>=2.0.0",
]
